Alterado imagem de capa, e removido espaço em branco.

--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 
 <body>
 
-
    <div class="calibre" id="calibre_link-28">
       <div class="calibre1">
          <div class="cover">
-            <img src="images/00000.jpeg" class="image-cover" alt="Cover book">
+            <img src="cover.jpg" class="image-cover" alt="Cover book">
          </div>
          <p class="calibre2"> <a id="calibre_link-35"></a><a id="calibre_link-36"></a><a id="calibre_link-37"></a><a
                id="calibre_link-38"><span class="calibre3">Kundalini</span><span class="calibre4"></span><span
